Changed profile pic

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Hi, I am <b><strong>Leo Bergqvist</strong></b>
             </h1>
             <p class="section__subtitle section__subtitle--intro">MSc Interactive Media Technology</p>
-            <img src="img_Leo/1000033801.jpg" alt="a picture of me" class="intro__img">
+            <img src="img_Leo/magic_bus.jpg" alt="a picture of me" class="intro__img">
 
             <div class="section__skills">
                 <i class="devicon-github-original colored"></i>
