--- a/schedule.html
+++ b/schedule.html
@@ -17,10 +17,10 @@
         
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                Cleaning Schedule
+                Schedule
             </h1>
             <p id="cleaning" class="section__subtitle--intro--cleaning">Web, Django</p>            
-            <!-- <img src="img_Leo/schedule_intro.png" alt="" class="intro__img"> -->
+            <img src="img_Leo/schedule_thumb2.png" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-individual">
