--- a/index.html
+++ b/index.html
@@ -103,34 +103,53 @@
 
                 <!-- Portfolio item 06 -->
                 <a href="schedule.html" class="portfolio__item">
-                    <img src="img_Leo/schedule_thumb2.png" alt="" class="portfolio__img">
+                    <div class="portfolio__overlay">
+                        <img src="img_Leo/schedule_thumbnail.jpg" alt="" class="portfolio__img">
+                        <div class="overlay__text">
+                            <span>Django | Web | UX </span>
+                        </div>
+                    </div>
                 </a>
 
                 <!-- Portfolio item 01 -->
                 <a href="climateArt.html" class="portfolio__item">
-                    <img src="img_Leo/climateAR1_cr.png" alt="" class="portfolio__img">
+                    <div class="portfolio__overlay">
+                        <img src="img_Leo/climateAR1_thumbnail.jpg" alt="" class="portfolio__img">
+                        <div class="overlay__text">Unity | C# | Git</div>
+                    </div>
                 </a>
 
                 <!-- Portfolio item 02 -->
                 <a href="macroPhighters.html" class="portfolio__item">
-                    <img src="img_Leo/macroPhighter_cr.png" alt="" class="portfolio__img">
+                    <div class="portfolio__overlay">
+                        <img src="img_Leo/macroPhighter_thumbnail.jpg" alt="" class="portfolio__img">
+                        <div class="overlay__text">Unity | C# | Git</div>
+                    </div>
                 </a>
 
                 <!-- Portfolio item 03 -->
                 <a href="infoViz.html" class="portfolio__item">
-                    <img src="img_Leo/staffiz_cr.png" alt="" class="portfolio__img">
+                    <div class="portfolio__overlay">
+                        <img src="img_Leo/staffiz_thumbnail.jpg" alt="" class="portfolio__img">
+                        <div class="overlay__text">Web | React | D3.js | UX</div>
+                    </div>
                 </a>
 
                 <!-- Portfolio item 04 -->
                 <a href="arthello.html" class="portfolio__item">
-                    <img src="img_Leo/arthello_cr_cr.png" alt="" class="portfolio__img">
+                    <div class="portfolio__overlay">
+                        <img src="img_Leo/arthello_thumbnail.jpg" alt="" class="portfolio__img">
+                        <div class="overlay__text">Unity | C#</div>
+                    </div>
                 </a>
 
                 <!-- Portfolio item 05 -->
                 <a href="heardWhen.html" class="portfolio__item">
-                    <img src="img_Leo/heard_when_cr.jpg" alt="" class="portfolio__img">
+                    <div class="portfolio__overlay">
+                        <img src="img_Leo/heard_when_thumbnail.jpg" alt="" class="portfolio__img">
+                        <div class="overlay__text">Web | Git | Vue</div>
+                    </div>
                 </a>
-
 
             </div>
             <br>
