--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
 
     <script src="js/index.js"></script>
 
-    <audio id="mySong" loop>
-        <source src="Trance - 009 Sound System Dreamscape.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    <button onclick="toggleSong()" id="musicButton">Add Ambience</button>
 
     <!-- Introduction -->
     <section class="intro" id="home">
@@ -138,54 +133,79 @@
             <br>
             <h2 class="section__title">Work experience</h2>
             <br>
+
             <section class="section__experience">
-                <div class="experience-container">
-                    <div>
-                        <h3>
-                            <strong>Lime Technologies 💼</strong>
-                        </h3>
-                        <p><strong>Application Consultant (2023–2024):</strong></p>
-                        <p>Customized CRM solutions for clients using Python, TypeScript, CSS, SQL, and VBA.</p>
 
-                        <p><strong>Including:</strong></p>
+                <table class="experience-table">
+                    <thead>
+                        <tr>
+                            <th style="width: 20%;">Company</th>
+                            <th style="width: 25%;">Role & Period</th>
+                            <th style="width: 55%;">Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td data-label="Company"><strong>Lime Technologies</strong></td>
+                            <td>
+                                <span class="role-title">Application Consultant</span>
+                                <span class="date-range">2023–2024</span>
+                            </td>
+                            <td>
+                                <p>Customized CRM solutions using <span class="tech-stack">Python, TypeScript, CSS, SQL,
+                                        and VBA</span>.</p>
+                                <ul class="details-list">
+                                    <li><strong>Customization:</strong> Tailored Lime CRM with custom code, new
+                                        features, and bespoke functionalities.</li>
+                                    <li><strong>Integration:</strong> Built data flows and REST APIs for seamless system
+                                        exchanges.</li>
+                                    <li><strong>Solution Dev:</strong> Created front-end components, bulk invoice
+                                        generation, and automated workflows.</li>
+                                    <li><strong>Quality & Planning:</strong> Conducted code reviews, wrote tests, and
+                                        managed project timelines.</li>
+                                    <li><strong>Client Interaction:</strong> Led workshops and meetings to refine
+                                        customer solutions.</li>
+                                </ul>
+                            </td>
+                        </tr>
 
-                        <p><strong><em>Customization & Integration:</em></strong></p>
-                        <p>Tailored Lime CRM with custom code</p>
-                        <p>adding new features and bespoke functionalities based on customer needs.</p>
+                        <tr>
+                            <td><strong>KTH</strong></td>
+                            <td>
+                                <span class="role-title">Mentor</span>
+                                <span class="date-range">2022</span>
+                            </td>
+                            <td>
+                                <p>
+                                    <li>Supported a student with a Neurodivergent disorder</li>
+                                    <li>improved study habits and
+                                        academic success through UX principles.</li>
 
-                        <p><strong><em>Data Handling & System Integration:</em></strong></p>
-                        <p>Built data flows and integrations (e.g., REST APIs)</p>
-                        <p>allowing seamless data exchanges between systems.</p>
+                                </p>
+                            </td>
+                        </tr>
 
-                        <p><strong><em>Solution Development:</em></strong></p>
-                        <p>Created front-end components and custom behavior</p>
-                        <p>including bulk invoice generation or automated data loading workflows.</p>
-
-                        <p><strong><em>Quality & Planning:</em></strong></p>
-                        <p>Conducted code reviews, wrote tests, and estimated project timelines. Balanced programming
-                            with technical project management,</p>
-
-                        <p><strong><em>Client Interaction:</em></strong></p>
-                        <p>Collaborated directly with customers through meetings, workshops, and updates to deliver and
-                            refine solutions.</p>
-                    </div>
-
-                    <div>
-                        <h3><strong>KTH 💼</strong></h3>
-                        <p><strong>Mentor (2022):</strong></p>
-                        <p>Supported students with ADHD and Autism, improving study habits and academic success through
-                            UX
-                            principles.</p>
-
-                        <h3><strong>KTH 💼</strong></h3>
-                        <p><strong>Teaching Assistant (2021–2022):</strong></p>
-                        <p>Assisted with course delivery, grading, and student support for Applied Computer Science and
-                            Programming Techniques.</p>
-                    </div>
-
-                </div>
-
-
+                        <tr>
+                            <td><strong>KTH</strong></td>
+                            <td>
+                                <span class="role-title">Teaching Assistant</span>
+                                <span class="date-range">2021–2022</span>
+                            </td>
+                            <td>
+                                <p>
+                                    <li>Assisted in the courses <em>Applied
+                                            Computer
+                                            Science</em> and
+                                        <em>Programming Techniques</em>
+                                    </li>
+                                    <li>Assisted with course
+                                        delivery,
+                                        grading, and student support</li>
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
 
             </section>
 
