auto generate projects + dark mode draft
this commit adds:

* autogenerated projects from js
* draft for darkmode

--- a/index.html
+++ b/index.html
@@ -69,150 +69,98 @@
     <!-- My Work -->
     <section class="my-work" id="work">
         <br>
-        <div>
-            <h2 class="section__title">
-                Projects
-            </h2>
-            <br>
-            <p class="section__subtitle"></p>
 
-            <div class="portfolio">
-                <!-- Portfolio item 06 -->
-                <a href="schedule.html" class="portfolio__item">
-                    <div class="portfolio__overlay">
-                        <img src="img_Leo/schedule_thumbnail.jpg" alt="" class="portfolio__img">
-                        <div class="overlay__text">
-                            <span>Django | Web | UX </span>
-                        </div>
-                    </div>
-                </a>
+        <h2 class="section__title">Projects</h2>
+        <br>
+        <p class="section__subtitle"></p>
 
-                <!-- Portfolio item 01 -->
-                <a href="climateArt.html" class="portfolio__item">
-                    <div class="portfolio__overlay">
-                        <img src="img_Leo/climateAR1_thumbnail.jpg" alt="" class="portfolio__img">
-                        <div class="overlay__text">Unity | C# | Git</div>
-                    </div>
-                </a>
+        <div class="portfolio" id="portfolio"></div>
 
-                <!-- Portfolio item 02 -->
-                <a href="macroPhighters.html" class="portfolio__item">
-                    <div class="portfolio__overlay">
-                        <img src="img_Leo/macroPhighter_thumbnail.jpg" alt="" class="portfolio__img">
-                        <div class="overlay__text">Unity | C# | Git</div>
-                    </div>
-                </a>
+        <br>
+        <h2 class="section__title">Work experience</h2>
+        <br>
 
-                <!-- Portfolio item 03 -->
-                <a href="infoViz.html" class="portfolio__item">
-                    <div class="portfolio__overlay">
-                        <img src="img_Leo/staffiz_thumbnail.jpg" alt="" class="portfolio__img">
-                        <div class="overlay__text">Web | React | D3.js | UX</div>
-                    </div>
-                </a>
+        <section class="section__experience">
 
-                <!-- Portfolio item 04 -->
-                <a href="arthello.html" class="portfolio__item">
-                    <div class="portfolio__overlay">
-                        <img src="img_Leo/arthello_thumbnail.jpg" alt="" class="portfolio__img">
-                        <div class="overlay__text">Unity | C#</div>
-                    </div>
-                </a>
+            <table class="experience-table">
+                <thead>
+                    <tr>
+                        <th style="width: 20%;">Company</th>
+                        <th style="width: 25%;">Role & Period</th>
+                        <th style="width: 55%;">Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td data-label="Company"><strong>Lime Technologies</strong></td>
+                        <td>
+                            <span class="role-title">Application Consultant</span>
+                            <span class="date-range">2023–2024</span>
+                        </td>
+                        <td>
+                            <p>Customized CRM solutions using <span class="tech-stack">Python, TypeScript, CSS, SQL,
+                                    and VBA</span>.</p>
+                            <ul class="details-list">
+                                <li><strong>Customization:</strong> Tailored Lime CRM with custom code, new
+                                    features, and bespoke functionalities.</li>
+                                <li><strong>Integration:</strong> Built data flows and REST APIs for seamless system
+                                    exchanges.</li>
+                                <li><strong>Solution Dev:</strong> Created front-end components, bulk invoice
+                                    generation, and automated workflows.</li>
+                                <li><strong>Quality & Planning:</strong> Conducted code reviews, wrote tests, and
+                                    managed project timelines.</li>
+                                <li><strong>Client Interaction:</strong> Led workshops and meetings to refine
+                                    customer solutions.</li>
+                            </ul>
+                        </td>
+                    </tr>
 
-                <!-- Portfolio item 05 -->
-                <a href="heardWhen.html" class="portfolio__item">
-                    <div class="portfolio__overlay">
-                        <img src="img_Leo/heard_when_thumbnail.jpg" alt="" class="portfolio__img">
-                        <div class="overlay__text">Web | Git | Vue</div>
-                    </div>
-                </a>
+                    <tr>
+                        <td><strong>KTH</strong></td>
+                        <td>
+                            <span class="role-title">Mentor</span>
+                            <span class="date-range">2022</span>
+                        </td>
+                        <td>
+                            <p>
+                                <li>Supported a student with a Neurodivergent disorder</li>
+                                <li>improved study habits and
+                                    academic success through UX principles.</li>
 
-            </div>
-            <br>
-            <h2 class="section__title">Work experience</h2>
-            <br>
+                            </p>
+                        </td>
+                    </tr>
 
-            <section class="section__experience">
+                    <tr>
+                        <td><strong>KTH</strong></td>
+                        <td>
+                            <span class="role-title">Teaching Assistant</span>
+                            <span class="date-range">2021–2022</span>
+                        </td>
+                        <td>
+                            <p>
+                                <li>Assisted in the courses <em>Applied
+                                        Computer
+                                        Science</em> and
+                                    <em>Programming Techniques</em>
+                                </li>
+                                <li>Assisted with course
+                                    delivery,
+                                    grading, and student support</li>
+                            </p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-                <table class="experience-table">
-                    <thead>
-                        <tr>
-                            <th style="width: 20%;">Company</th>
-                            <th style="width: 25%;">Role & Period</th>
-                            <th style="width: 55%;">Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td data-label="Company"><strong>Lime Technologies</strong></td>
-                            <td>
-                                <span class="role-title">Application Consultant</span>
-                                <span class="date-range">2023–2024</span>
-                            </td>
-                            <td>
-                                <p>Customized CRM solutions using <span class="tech-stack">Python, TypeScript, CSS, SQL,
-                                        and VBA</span>.</p>
-                                <ul class="details-list">
-                                    <li><strong>Customization:</strong> Tailored Lime CRM with custom code, new
-                                        features, and bespoke functionalities.</li>
-                                    <li><strong>Integration:</strong> Built data flows and REST APIs for seamless system
-                                        exchanges.</li>
-                                    <li><strong>Solution Dev:</strong> Created front-end components, bulk invoice
-                                        generation, and automated workflows.</li>
-                                    <li><strong>Quality & Planning:</strong> Conducted code reviews, wrote tests, and
-                                        managed project timelines.</li>
-                                    <li><strong>Client Interaction:</strong> Led workshops and meetings to refine
-                                        customer solutions.</li>
-                                </ul>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td><strong>KTH</strong></td>
-                            <td>
-                                <span class="role-title">Mentor</span>
-                                <span class="date-range">2022</span>
-                            </td>
-                            <td>
-                                <p>
-                                    <li>Supported a student with a Neurodivergent disorder</li>
-                                    <li>improved study habits and
-                                        academic success through UX principles.</li>
-
-                                </p>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td><strong>KTH</strong></td>
-                            <td>
-                                <span class="role-title">Teaching Assistant</span>
-                                <span class="date-range">2021–2022</span>
-                            </td>
-                            <td>
-                                <p>
-                                    <li>Assisted in the courses <em>Applied
-                                            Computer
-                                            Science</em> and
-                                        <em>Programming Techniques</em>
-                                    </li>
-                                    <li>Assisted with course
-                                        delivery,
-                                        grading, and student support</li>
-                                </p>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </section>
+        </section>
 
 
-            <!-- Footer -->
-            <footer class="footer">
-                <a href="mailto:leo.bergqvist@hotmail.se" class="footer__link">Get in Touch</a>
-                <a href="CV_leo_bergqvist.pdf" download class="footer__link">Download CV</a>
-            </footer>
+        <!-- Footer -->
+        <footer class="footer">
+            <a href="mailto:leo.bergqvist@hotmail.se" class="footer__link">Get in Touch</a>
+            <a href="CV_leo_bergqvist.pdf" download class="footer__link">Download CV</a>
+        </footer>
 
 
 
