Updated portfolio item link

--- a/climateArt.html
+++ b/climateArt.html
@@ -31,7 +31,8 @@
         <p>
             <strong>Description:</strong> An educational experience for elementary school students about
             emissions from different energy sources.
-            <a href="https://dh2413-group4-macrophighters.github.io/Climate-Project-Web/"><strong>Link:</strong></a>
+            <a class="portfolio-item-link"
+                href="https://dh2413-group4-macrophighters.github.io/Climate-Project-Web/"><strong>Link:</strong></a>
         </p>
 
         <img src="img_Leo/climateAR1.png" alt="Climate_ART Screenshot">
