--- a/heardWhen.html
+++ b/heardWhen.html
@@ -30,7 +30,8 @@
     <div class="portfolio-item-individual">
         <p><strong>Description:</strong> A multiplayer music trivia game! Created with <strong>JavaScript, TypeScript,
                 CSS, HTML, Vue, Firebase</strong>
-            <a href=" https://heard-when-237e7.firebaseapp.com/me"><strong>Link:</strong></a>
+            <a class="portfolio-item-link"
+                href=" https://heard-when-237e7.firebaseapp.com/me"><strong>Link:</strong></a>
         </p>
         <img src="img_Leo/heard_when.jpg" alt="">
 
@@ -50,7 +51,8 @@
         <p>Players arrange songs on a shared board, placing them in the correct order based on release year.</p>
 
         <p>If a guess is correct, the song is placed and the player can choose to <em>Lock</em> their progress or
-            <em>Continue</em> for more points.</p>
+            <em>Continue</em> for more points.
+        </p>
 
         <p>An incorrect guess discards that round’s cards and lets other players guess the exact year.</p>
 
