--- a/infoViz.html
+++ b/infoViz.html
@@ -31,7 +31,7 @@
         <p><strong>Description:</strong> We were tasked with making a visualization for a teacher at KTH. The
             visualization gives an overview of teachers and courses with too many or too few
             allocated work hours. <Strong>We used JavaScript, CSS, HTML, React, D3.js</Strong>
-            <a href="https://ivis-project-staffiz.web.app/"><strong>Link:</strong></a>
+            <a class="portfolio-item-link" href="https://ivis-project-staffiz.web.app/"><strong>Link:</strong></a>
         </p>
         <img src="img_Leo/staffiz.png" alt="">
 
