--- a/macroPhighters.html
+++ b/macroPhighters.html
@@ -28,7 +28,7 @@
 
     <div class="portfolio-item-individual">
         <p><strong>Description:</strong> An AR Game based on the immune system reacting to bacteria entering the
-            body. AR provided with <strong>Ar foundations</strong> <a
+            body. AR provided with <strong>Ar foundations</strong> <a class="portfolio-item-link"
                 href="https://dh2413-group4-macrophighters.github.io/Project-Web/"><strong>Link:</strong></a>
         </p>
         <img src="img_Leo/macroPhighter.png" alt="">
