--- a/schedule.html
+++ b/schedule.html
@@ -35,7 +35,7 @@
             assign tasks to house members.</p>
         <p>
             The app features a clean, user-friendly interface powered by Django’s robust backend. <strong><a
-                    href="https://kingleo.pythonanywhere.com/solo1/">Link:</a> </strong>
+                    class="portfolio-item-link" href="https://kingleo.pythonanywhere.com/solo1/">Link:</a> </strong>
         </p>
         <img src="img_Leo/schedule_front.png" alt="">
 
