--- a/arthello.html
+++ b/arthello.html
@@ -28,10 +28,12 @@
     </section>
 
     <div class="portfolio-item-individual">
-        <p><strong>Description:</strong> An AR version of the classic game Othello / reversi made in the game engine
+        <p>
+            <strong>Description:</strong> An AR version of the classic game Othello / reversi made in the game engine
             <strong>Unity</strong>.
-            <a href=" https://drive.google.com/file/d/1KtDNBI2kUCPl3W93OtFc8jWgUp4Pm2Qk/view?usp=sharing 
+            <a class="portfolio-item-link" href=" https://drive.google.com/file/d/1KtDNBI2kUCPl3W93OtFc8jWgUp4Pm2Qk/view?usp=sharing 
                 "><strong>Link:</strong></a>
+
         </p>
         <img class="img" src="img_Leo/arthello.png" alt="">
 
@@ -96,8 +98,6 @@
     <footer class="footer">
         <a href="index.html" class="footer__link">Go back</a>
     </footer>
-
-    <script src="js/index.js"></script>
 
 </body>
 
