--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <!-- Footer -->
         <footer class="footer">
             <a href="mailto:leo.bergqvist@hotmail.se" class="footer__link">Get in Touch</a>
-            <a href="CV_leo_bergqvist.pdf" download class="footer__link">Download CV</a>
+            <a href="CV Leo Bergqvist.pdf" download class="footer__link">Download CV</a>
         </footer>
 
 
