--- a/frettrainer.html
+++ b/frettrainer.html
@@ -31,7 +31,7 @@
     <div class="portfolio-item-individual">
         <p>
             <strong>Description:</strong> A React app for learning guitar. A work in progress.
-            <a class="portfolio-item-link" href="https://frettrainer.vercel.app/"><strong>Link:</strong></a>
+            <a class="portfolio-item-link" href="https://fretboard-memory-game.vercel.app/"><strong>Link:</strong></a>
         </p>
 
         <p>
